2009-03-05  Christopher Bratusek <zanghar@freenet.de>
	* HACKING: updated

	* sawfish.ebuild.in
	* sawfish.spec.in: add HACKING to doc-files

	* autogen.sh
	* configure.in: de-intltoolize sawfish ... not working properly
	
	* po/LINGUAS
	* po/Makefile.in.in: removed

	* po/update.sh
	* po/make-pot
	* po/sawfish.pot
	* po/Makefile.in
	* po/sawfish-xgettext: added back

	* po/*.po
	* po/sawfish.pot: updated

	* COPYING.SOUNDS: license for the sounds is Artistic2.0beta4

	* THANKS: updated 

	* sounds/focused.wav
	* sounds/iconify.wav
	* sounds/map-transient.wav
	* sounds/map.wav
	* sounds/maximize.wav
	* sounds/move-viewport.wav
	* sounds/shade.wav
	* sounds/unfocused.wav
	* sounds/uniconify.wav
	* sounds/unmap-transient.wav
	* sounds/unmap.wav
	* sounds/unmaximize.wav
	* sounds/unshade.wav: added new sounds, by glh Pimenta, taken from his Feather/Needle Soundthemes

	* sounds/activate.wav
	* sounds/clicked.wav
	* sounds/gameover.wav
	* sounds/slide.wav
	* sounds/toggled.wav: removed old sounds

	* lisp/sawfish/wm/ext/audio-events.jl: use new sounds

2009-03-04  Christopher Bratusek <zanghar@freenet.de>
	* KEYBINDINGS: - added description of ISO_Left_Tab
	               - mention Alt Gr
		       - mention Buttons 4 and 5
		       - add how to add keybindings manually

2009-03-03  Christopher Bratusek <zanghar@freenet.de>
	* man/user-doc.texi: fixed a typo

	* sawfish.ebuild.in
	* sawfish.spec.in: add USERDOC to doc-files

2009-03-01  Guillermo S. Romero <gsromero@svn.gnome.org>
	* man/user-doc.texi: on going work on user docs.
	
2009-02-19  Christopher Bratusek <zanghar@freenet.de>
	* sawfish.desktop
	* sawfish-wm.desktop
	* sawfish-session.desktop: remove useless translations, which are equal to the original string

	* lisp/sawfish/wm/ext/infinite-desktop.jl: update file-header

	* lisp/sawfish/wm/tabs/tab.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: update file-headers

	* man/news.texi: better description for infinite-desktop.jl

	* themes/*/.jl: s/sawmill/sawfish/g
