@@ -72,5 +72,5 @@ src_compile() {
 
 src_install() {
 	emake DESTDIR="${D}" install || die "make install failed"
-	dodoc AUTHORS BUGS ChangeLog FAQ NEWS README THANKS TODO OPTIONS README.IMPORTANT KEYBINDINGS USERDOC HACKING
+	dodoc AUTHORS BUGS ChangeLog FAQ NEWS README THANKS TODO OPTIONS README.IMPORTANT KEYBINDINGS USERDOC HACKING COPYING COPYING.SOUNDS
 }
