@@ -2,7 +2,9 @@
 	* HACKING: updated
 
 	* sawfish.ebuild.in
-	* sawfish.spec.in: add HACKING to doc-files
+	* sawfish.spec.in: add HACKING, COYPING, COPYING.SOUNDS to doc-files
+
+	* sawfish.spec.in: package sawfish xsession file
 
 	* autogen.sh
 	* configure.in: de-intltoolize sawfish ... not working properly
